--- a/urara/support.html
+++ b/urara/support.html
@@ -18,10 +18,10 @@
     </style>
 </head>
 <body>
-    <h1>urara Support</h1>
+    <h1>Support</h1>
     
     <h2>Get Help</h2>
-    <p>Thank you for using Urara! If you need assistance or have questions, we're here to help.</p>
+    <p>Thank you for using urara! If you need assistance or have questions, we're here to help.</p>
     
     <h2>Contact</h2>
     <p>For support inquiries, please email us at:</p>
