--- a/urara/privacy-policy.html
+++ b/urara/privacy-policy.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Privacy Policy - Urara</title>
+    <title>Privacy Policy - urara</title>
     <style>
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Arial, sans-serif;
@@ -18,7 +18,7 @@
     </style>
 </head>
 <body>
-    <h1>Privacy Policy for Urara</h1>
+    <h1>Privacy Policy for urara</h1>
     <p><strong>Last updated:</strong> October 19, 2025</p>
     
     <h2>Overview</h2>
