--- a/urara/privacy-policy.html
+++ b/urara/privacy-policy.html
@@ -18,7 +18,7 @@
     </style>
 </head>
 <body>
-    <h1>Privacy Policy for urara</h1>
+    <h1>Privacy Policy</h1>
     <p><strong>Last updated:</strong> October 19, 2025</p>
     
     <h2>Overview</h2>
